--- a/drift-app/package.json
+++ b/drift-app/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.2.0",
+    "react-datepicker": "^0.28.1",
     "react-dom": "^15.2.0"
   }
 }
